--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koishi-plugin-tools",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Some simple tools for Koishi",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -21,7 +21,7 @@
     "@types/qrcode": "^1.4.1"
   },
   "peerDependencies": {
-    "koishi": "^4.0.0-rc.1"
+    "koishi": "^4.0.0"
   },
   "dependencies": {
     "axios": "^0.21.4",
